# lab_scrapy

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  INSTALL.md  PLAN-scraper-intelligence.md  README.md  TECHNICAL_SPEC.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  watchlist.example.yaml
.agent/skills/start-dev/: SKILL.md
SPEC/: DOOL_documentacao_tecnica.md
docs/: 01-fundamentos-web-scraping.md  02-inteligencia-artificial-local.md  03-arquitetura-rag-e-vetores.md  04-infraestrutura-e-operacoes.md  MAPA_DO_REPOSITORIO.md  PLAN-doeba-fase3.md  README.md  TECHNICAL_MASTER.md
src/: cli.py  worker.py
src/api/: dependencies.py  main.py  routes.py
src/core/: client.py  config.py  models.py
src/intelligence/: chunker.py  cleaner.py  embeddings.py  engine.py
src/parsers/: html_parser.py  pdf_parser.py
src/persistence/: jsonl_writer.py  pg_repository.py
src/ui/: app.py
src/utils/: helpers.py
tests/: test_client.py  test_parsers.py
